--- a/hugo.toml
+++ b/hugo.toml
@@ -17,7 +17,7 @@ theme = 'hugo-theme-cleanwhite'
   href =  "/about/"
 
   [params.social]
-  github         = "https://github.com/yourgithub"
+  github         = "https://github.com/aitkarim1"
 
 
 
